# auto-api-rust

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: client.rs  lib.rs
tests/: client_test.rs
