[package]
name = "auto-api-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for auto-api.com — car listings API across multiple marketplaces"
license = "MIT"
repository = "https://github.com/autoapicom/auto-api-rust"
readme = "README.md"
keywords = ["auto-api", "encar-api", "autoscout24-api", "mobile-de-api", "car-listings"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
