[package]
name = "auto-api-client"
version = "1.0.2"
edition = "2021"
description = "Async client for auto-api.com — car listings from encar, mobile.de, autoscout24 and more"
license = "MIT"
authors = ["AUTO-API.COM"]
homepage = "https://auto-api.com"
repository = "https://github.com/autoapicom/auto-api-rust"
readme = "README.md"
keywords = ["auto-api", "encar-api", "autoscout24-api", "mobile-de-api", "car-listings"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
